--- a/css/theme/moon.css
+++ b/css/theme/moon.css
@@ -22,7 +22,7 @@ body {
   font-family: "Lato", sans-serif;
   font-size: 40px;
   font-weight: normal;
-  color: #93a1a1; }
+  color: #fff; }
 
 ::selection {
   color: #fff;
